--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,8 +1,51 @@
 baseURL: https://example.org/
 languageCode: en-us
-title: Live Learn Distill
+title: "Live Learn Distill"
 theme: ["PaperMod"]
 
 caches:
   images:
     dir: :cacheDir/images
+
+
+params:
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: "Live Learn Distill"
+  description: "Lisa's personal website"
+
+  ShowReadingTime: true
+  ShowShareButtons: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: false
+  ShowWordCount: true
+  ShowRssButtonInSectionTermList: true
+  UseHugoToc: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+
+  socialIcons:
+    - name: x
+      url: "https://x.com/hutusa"
+    - name: github
+      url: "https://github.com/hutusa"
+
+menu:
+  main:
+    - identifier: archives
+      name: Archives
+      url: /archives/
+      weight: 10
+    - identifier: tags
+      name: Tags
+      url: /tags/
+      weight: 20
+    - identifier: search
+      name: Search
+      url: /search/
+      weight: 30
